--- a/index.html
+++ b/index.html
@@ -4,24 +4,46 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<p class="text">Hello</p>
-	<p class="texto">Hello</p>
-	<div class="contain">
-	<div class="one"></div>
-	<div class="two"></div>
-	<div class="three"></div>
-</div>
-	<div class="five">
-	<div class="four"></div>
+	<div id="main">
+		<div class="container">
+			<div class="top-container">
+				<header class="navbar">
+					<div class="logo">Avalanche</div>
+					<button class='user' type='button'>
+					  <div class="name">
+							<image src='doggo.png' class='profileimg'></image>
+							Doggo
+						</div>
+					</button>
+				</header>
+			</div>
+			<div class="main-view">
+				<section class='contentSpacing'>
+					  <div class='recplaygrid'>
+							  <h2 class='recplay'>Recently played</h2>
+								<div class='albumone'>
+									<image class='albumimg' src='feelspecial.jpg'/>
+									<div class='desc'>Feel Special</div>
+									<div class='artist'>Twice</div>
+								</div>
+								<div class='albumtwo'>
+									<image class='albumimg' src='shesfine.jpg'/>
+									<div class='desc'>She's Fine</div>
+									<div class='artist'>HEIZE</div>
+								</div>
+								<div class='albumthree'>
+									<image class='albumimg' src='itsokay.jpg'/>
+									<div class='desc'>It's Okay</div>
+									<div class='artist'>Kisum</div>
+								</div>
+								<div class='albumfour'>
+									<image class='albumimg' src='fourseason.jpg'/>
+									<div class='desc'>Four Seasons</div>
+									<div class='artist'>Taeyeon</div>
+								</div>
+						</div>
+				</section>
+			</div>
+		</div>
 	</div>
-	<div class="seven">
-	<div class="six"></div>
-	</div>
-	<div class="eight"></div>
-	<div class="nine"></div>
-	<div class="ten"></div>
-	<div class="a"></div>
-	<div class="b"></div>
-	<div class="c"></div>
-	<div class="d"></div>
 </body>
