--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
       </dl>
     </script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 		 <script>
       (function() {
 
