--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 	     <a href="/login">Log in</a>
 	    </div>
 	    <div id="loggedin">
+				<div id="user-profile">
+        </div>
+        <div id="oauth">
+        </div>
+        <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
 	    </div>
 		 </div>
 
