--- a/login.html
+++ b/login.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
 <body>
-  <p>{{display_name}}</p>
+  <script type="text/x-handlebars-template">
+    <div>{{display_name}}</div>
+  </script>
 </body>
 </html>
