--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <body>
-  <script type="text/x-handlebars-template">
+  <script type='text/javascript'>
     <div>{{display_name}}</div>
   </script>
 </body>
