--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                   'Authorization': 'Bearer ' + access_token
                 },
                 success: function(response) {
-                  userProfilePlaceholder.innerHTML = userProfileTemplate(response);
+                  console.log(userProfilePlaceholder.innerHTML = userProfileTemplate(response));
 
                   $('#login').hide();
                   $('#loggedin').show();
