--- a/login.html
+++ b/login.html
@@ -107,7 +107,7 @@
                 },
                 success: function(response) {
                   console.log(userProfilePlaceholder.innerHTML = userProfileTemplate(response));
-
+console.log(response);
                   $('#login').hide();
                   $('#loggedin').show();
                 }
