--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
     <script>
 
       $(document).ready(function() {
-
+console.log('234');
         /**
          * Obtains parameters from the hash of the URL
          * @return Object
