--- a/login.html
+++ b/login.html
@@ -89,7 +89,7 @@ console.log('1');
         var access_token = params.access_token,
             refresh_token = params.refresh_token,
             error = params.error;
-console.log(params);
+console.log(params.error);
         if (error) {
           alert('There was an error during the authentication');
         } else {
