--- a/login.html
+++ b/login.html
@@ -61,6 +61,20 @@
     <script>
 
       $(document).ready(function() {
+
+        $.ajax({
+          url: '/refresh_token',
+          data: {
+            'refresh_token': refresh_token
+          }
+        }).done(function(data) {
+          access_token = data.access_token;
+          oauthPlaceholder.innerHTML = oauthTemplate({
+            access_token: access_token,
+            refresh_token: refresh_token
+          });
+        });
+
 console.log('1');
         /**
          * Obtains parameters from the hash of the URL
