--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
       "client_id":     myid,
     },
     success: function(result) {
-      // handle result...
+      console.log('yes');
     },
   }
 );
