--- a/login.html
+++ b/login.html
@@ -120,8 +120,8 @@
 
           document.getElementById('login-button').addEventListener('click', function() {
 
-            var client_id = 'CLIENT_ID'; // Your client id
-            var redirect_uri = 'REDIRECT_URI'; // Your redirect uri
+            var client_id = '4977f5049db14ed99184bd454c05716a'; // Your client id
+            var redirect_uri = 'https://yumichiya.github.io/callback'; // Your redirect uri
 
             var state = generateRandomString(16);
 
