--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           document.getElementById('login-button').addEventListener('click', function() {
 
             var client_id = '4977f5049db14ed99184bd454c05716a'; // Your client id
-            var redirect_uri = 'https://yumichiya.github.io'; // Your redirect uri
+            var redirect_uri = 'https://yumichiya.github.io/login'; // Your redirect uri
 
             var state = generateRandomString(16);
 
