--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </ul>
         </div>
         <div class="now-playing">
-            <image class="now-playing-img" src="music.png"/>
+            <image class="now-playing-img" src="images/music.png"/>
         </div>
         <div class="main-view" >
           <div class="spacer"></div>
@@ -66,22 +66,22 @@
               <div class='recplaygrid'>
                   <h2 class='recplay'>Recently played</h2>
                   <div class='albumone'>
-                    <image class='albumimg' src='music.png'/>
+                    <image class='albumimg' src='images/music.png'/>
                     <div class='album'>Album</div>
                     <div class='artist'>Artist</div>
                   </div>
                   <div class='albumtwo'>
-                    <image class='albumimg' src='music.png'/>
+                    <image class='albumimg' src='images/music.png'/>
                     <div class='album'>Album</div>
                     <div class='artist'>Artist</div>
                   </div>
                   <div class='albumthree'>
-                    <image class='albumimg' src='music.png'/>
+                    <image class='albumimg' src='images/music.png'/>
                     <div class='album'>Album</div>
                     <div class='artist'>Artist</div>
                   </div>
                   <div class='albumfour'>
-                    <image class='albumimg' src='music.png'/>
+                    <image class='albumimg' src='images/music.png'/>
                     <div class='album'>Album</div>
                     <div class='artist'>Artist</div>
                   </div>
@@ -93,7 +93,7 @@
       </div>
     </div>
 
-    
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script>
       (function() {
