--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
             <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
             <dt>Country</dt><dd>{{country}}</dd>
+            <p>Test {{display_name}}</p>
           </dl>
         </div>
       </div>
