--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Avalanche</title>
     
-    <link rel='stylesheet' src='style.css'>
+    <link rel='stylesheet' href='style.css'>
     <style type="text/css">
       #login, #loggedin {
         display: none;
