--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script>
-      (function() {
+      $(document).ready(function() {
 
         var stateKey = 'spotify_auth_state';
 
@@ -106,7 +106,25 @@
                 }
             });
           
+            document.getElementById('login-button').addEventListener('click', function() {
 
+              var client_id = '4977f5049db14ed99184bd454c05716a'; // Your client id
+              var redirect_uri = 'https://yumichiya.github.io'; // Your redirect uri
+
+              var state = generateRandomString(16);
+
+              localStorage.setItem(stateKey, state);
+              var scope = 'user-read-private user-read-email';
+
+              var url = 'https://accounts.spotify.com/authorize';
+              url += '?response_type=token';
+              url += '&client_id=' + encodeURIComponent(client_id);
+              url += '&scope=' + encodeURIComponent(scope);
+              url += '&redirect_uri=' + encodeURIComponent(redirect_uri);
+              url += '&state=' + encodeURIComponent(state);
+
+              window.location = url;
+            }, false);
           
         }
       })();
