--- a/login.html
+++ b/login.html
@@ -46,6 +46,9 @@
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script>
       $(document).ready(function() {
+        var params = getHashParams();
+
+        var access_token = params.access_token
         $.ajax({
           url: 'https://api.spotify.com/v1/me',
           headers: {
