--- a/login.html
+++ b/login.html
@@ -44,21 +44,7 @@
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script>
-      $(document).ready(function() {
-        var params = getHashParams();
-
-        var access_token = params.access_token
-        $.ajax({
-          url: 'https://api.spotify.com/v1/me',
-          headers: {
-            'Authorization': 'Bearer ' + access_token
-          },
-          success: function(response) {
-                  userProfilePlaceholder.innerHTML = userProfileTemplate(response);
-          }
-        });
-      });
+    <script src="test.js">
     </script>
   </body>
 </html>
