--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div id="login">
         <h1>This is an example of the Implicit Grant flow</h1>
-        <a href='login.html' id="login-button" class="btn btn-primary">Log in with Spotify</a>
+        <button id="login-button" class="btn btn-primary">Log in with Spotify</button>
       </div>
       <div id="loggedin">
         <div id="user-profile">
