--- a/index.html
+++ b/index.html
@@ -8,39 +8,33 @@
 
   <body>
     <div class="container">
-      <div id="login">
-        <h1>This is an example of the Implicit Grant flow</h1>
-        <button id="login-button" class="btn btn-primary">Log in with Spotify</button>
-      </div>
-      <div id="loggedin">
-        <div id="user-profile">
-        </div>
-        <div id="oauth">
-        </div>
-      </div>
+      <h1>Displaying User Data</h1>
+      <p>Log in with your Spotify account and this demo will display information about you fetched using the Spotify Web API</p>
+      <button class="btn btn-primary" id="btn-login">Login</button>
+      <div id="result"></div>
     </div>
-    
-    <script id="user-profile-template" type="text/x-handlebars-template">
-      <dl>
-        <img src="{{images.0.url}}">
-        <dt>User Name</dt>
-        <dd>{{id}}</dd>
-        <dt>Display Name</dt>
-        <dd>{{display_name}}</dd>
-        <dt>Country</dt>
-        <dd>{{country}}</dd>
-        <dt>Followers</dt>
-        <dd>{{followers.total}}</dd>
-        <dt>Profile</dt>
-        <dd><a href="{{external_urls.spotify}}" target="_blank">{{external_urls.spotify}}</a></dd>
-        <dt>Email</dt>
-        <dd>{{email}}</dd>
-        <dt>Product</dt>
-        <dd>{{product}}</dd>
-      </dl>
+    <script id="result-template" type="text/x-handlebars-template">
+        <dl>
+          <img src="{{images.0.url}}">
+          <dt>User Name</dt>
+          <dd>{{id}}</dd>
+          <dt>Display Name</dt>
+          <dd>{{display_name}}</dd>
+          <dt>Country</dt>
+          <dd>{{country}}</dd>
+          <dt>Followers</dt>
+          <dd>{{followers.total}}</dd>
+          <dt>Profile</dt>
+          <dd><a href="{{external_urls.spotify}}" target="_blank">{{external_urls.spotify}}</a></dd>
+          <dt>Email</dt>
+          <dd>{{email}}</dd>
+          <dt>Product</dt>
+          <dd>{{product}}</dd>
+        </dl>
     </script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src='test.js'></script>
+  </body>
 </html>
