--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         </dl>
     </script>
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src='test.js'></script>
   </body>
 </html>
