--- a/index.html
+++ b/index.html
@@ -9,29 +9,36 @@
 
   <body>
     <div class="container">
-      <h1>Displaying User Data</h1>
-      <p>Log in with your Spotify account and this demo will display information about you fetched using the Spotify Web API</p>
-      <button class="btn btn-primary" id="btn-login">Login</button>
-      <div id="result"></div>
+      <div id="login">
+        <h1>This is an example of the Implicit Grant flow</h1>
+        <button id="login-button" class="btn btn-primary">Log in with Spotify</button>
+      </div>
+      <div id="loggedin">
+        <div id="user-profile">
+        </div>
+        <div id="oauth">
+        </div>
+      </div>
     </div>
-    <script id="result-template" type="text/x-handlebars-template">
-        <dl>
-          <img src="{{images.0.url}}">
-          <dt>User Name</dt>
-          <dd>{{id}}</dd>
-          <dt>Display Name</dt>
-          <dd>{{display_name}}</dd>
-          <dt>Country</dt>
-          <dd>{{country}}</dd>
-          <dt>Followers</dt>
-          <dd>{{followers.total}}</dd>
-          <dt>Profile</dt>
-          <dd><a href="{{external_urls.spotify}}" target="_blank">{{external_urls.spotify}}</a></dd>
-          <dt>Email</dt>
-          <dd>{{email}}</dd>
-          <dt>Product</dt>
-          <dd>{{product}}</dd>
-        </dl>
+
+    <script id="user-profile-template" type="text/x-handlebars-template">
+      <h1>Logged in as {{display_name}}</h1>
+      <div class="media">
+        <div class="pull-left">
+          <img class="media-object" width="150" src="{{images.0.url}}" />
+        </div>
+        <div class="media-body">
+          <dl class="dl-horizontal">
+            <dt>Display name</dt><dd class="clearfix">{{display_name}}</dd>
+            <dt>Id</dt><dd>{{id}}</dd>
+            <dt>Email</dt><dd>{{email}}</dd>
+            <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
+            <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
+            <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
+            <dt>Country</dt><dd>{{country}}</dd>
+          </dl>
+        </div>
+      </div>
     </script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
