--- a/login.html
+++ b/login.html
@@ -44,7 +44,17 @@
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="login.js">
+    <script>
+      window.onload = function () {
+        var url = document.location.href,
+          params = url.split('?')[1].split('&'),
+          data = {}, tmp;
+        for (var i = 0, l = params.length; i < l; i++) {
+          tmp = params[i].split('=');
+          data[tmp[0]] = tmp[1];
+        }
+        document.getElementById('here').innerHTML = data.name;
+      }
     </script>
   </body>
 </html>
