--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
     <div class="container">
       <div id="loggedin">
         <div id="user-profile">
+          <td id="here">test</td>
         </div>
         <div id="oauth">
         </div>
