--- a/login.html
+++ b/login.html
@@ -2,60 +2,10 @@
 <html>
   <head>
     <title>Avalanche</title>
-    <link rel='stylesheet' href='style.css'>
+    <link rel='stylesheet' href='sheet.css'>
   </head>
 
   <body>
-    <div class="container">
-      <div id="loggedin">
-        <div id="user-profile">
-          <td id="here">test</td>
-        </div>
-        <div id="oauth">
-        </div>
-      </div>
-    </div>
-
-    <script id="user-profile-template" type="text/x-handlebars-template">
-      <h1>Logged in as {{display_name}}</h1>
-      <div class="media">
-        <div class="pull-left">
-          <img class="media-object" width="150" src="{{images.0.url}}" />
-        </div>
-        <div class="media-body">
-          <dl class="dl-horizontal">
-            <dt>Display name</dt><dd class="clearfix">{{display_name}}</dd>
-            <dt>Id</dt><dd>{{id}}</dd>
-            <dt>Email</dt><dd>{{email}}</dd>
-            <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
-            <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
-            <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
-            <dt>Country</dt><dd>{{country}}</dd>
-          </dl>
-        </div>
-      </div>
-    </script>
-
-    <script id="oauth-template" type="text/x-handlebars-template">
-      <h2>oAuth info</h2>
-      <dl class="dl-horizontal">
-        <dt>Access token</dt><dd class="text-overflow">{{access_token}}</dd>
-      </dl>
-    </script>
-
-    <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script>
-      window.onload = function () {
-        var url = document.location.href,
-          params = url.split('?')[1].split('&'),
-          data = {}, tmp;
-        for (var i = 0, l = params.length; i < l; i++) {
-          tmp = params[i].split('=');
-          data[tmp[0]] = tmp[1];
-        }
-        document.getElementById('here').innerHTML = data.name;
-      }
-    </script>
+    <div></div>
   </body>
 </html>
