--- a/index.html
+++ b/index.html
@@ -8,75 +8,67 @@
   </head>
 
   <body>
-    <div class="container">
-      <div id="loggedin">
-        <div id="user-profile">
-        </div>
-        <div class="main">
-          <div class="container">
-            <div class="top-container">
-              <header class="topnav">
-                <div></div>
-                <div id="login">
-                  <button id="login-button" class="login-btn">Log in with Spotify</button>
-                </div>
-                <div id="loggedin">
-                  <div id="user-profile"></div>
-                </div>
-              </header>
-            </div>
-            <div class="nav-bar">
-              <div class="logo">Avalanche</div>
-              <ul>
-                  <li>
-                      <div class="nav-bar-items"><a class="nav-bar-link-active">Home</a></div>
-                  </li>
-                  <li>
-                      <div class="nav-bar-items"><a class="nav-bar-link">Discover</a></div>
-                  </li>
-                  <li>
-                      <div class="nav-bar-items"><a class="nav-bar-link">Following</a></div>
-                  </li>
-              </ul>
-            </div>
-            <div class="now-playing">
-                <image class="now-playing-img" src="images/music.png"/>
-            </div>
-            <div class="main-view" >
-              <div class="spacer"></div>
-              <section class='contentSpacing'>
-                  <div class='recplaygrid'>
-                      <h2 class='recplay'>Recently played</h2>
-                      <div class='albumone'>
-                        <image class='albumimg' src='images/music.png'/>
-                        <div class='album'>Album</div>
-                        <div class='artist'>Artist</div>
-                      </div>
-                      <div class='albumtwo'>
-                        <image class='albumimg' src='images/music.png'/>
-                        <div class='album'>Album</div>
-                        <div class='artist'>Artist</div>
-                      </div>
-                      <div class='albumthree'>
-                        <image class='albumimg' src='images/music.png'/>
-                        <div class='album'>Album</div>
-                        <div class='artist'>Artist</div>
-                      </div>
-                      <div class='albumfour'>
-                        <image class='albumimg' src='images/music.png'/>
-                        <div class='album'>Album</div>
-                        <div class='artist'>Artist</div>
-                      </div>
-                  </div>
-              </section>
-            </div>
-      
-      
+    <div class="containerone">
+      <div class="main">
+        <div class="container">
+          <div class="top-container">
+            <header class="topnav">
+              <div></div>
+              <div id="login">
+                <button id="login-button" class="login-btn">Log in with Spotify</button>
+              </div>
+              <div id="loggedin">
+                <div id="user-profile"></div>
+              </div>
+            </header>
           </div>
-        </div>
-        <div id="oauth">
-        </div>
-      </div>
+          <div class="nav-bar">
+            <div class="logo">Avalanche</div>
+            <ul>
+                <li>
+                    <div class="nav-bar-items"><a class="nav-bar-link-active">Home</a></div>
+                </li>
+                <li>
+                    <div class="nav-bar-items"><a class="nav-bar-link">Discover</a></div>
+                </li>
+                <li>
+                    <div class="nav-bar-items"><a class="nav-bar-link">Following</a></div>
+                </li>
+            </ul>
+          </div>
+          <div class="now-playing">
+              <image class="now-playing-img" src="images/music.png"/>
+          </div>
+          <div class="main-view" >
+            <div class="spacer"></div>
+            <section class='contentSpacing'>
+                <div class='recplaygrid'>
+                    <h2 class='recplay'>Recently played</h2>
+                    <div class='albumone'>
+                      <image class='albumimg' src='images/music.png'/>
+                      <div class='album'>Album</div>
+                      <div class='artist'>Artist</div>
+                    </div>
+                    <div class='albumtwo'>
+                      <image class='albumimg' src='images/music.png'/>
+                      <div class='album'>Album</div>
+                      <div class='artist'>Artist</div>
+                    </div>
+                    <div class='albumthree'>
+                      <image class='albumimg' src='images/music.png'/>
+                      <div class='album'>Album</div>
+                      <div class='artist'>Artist</div>
+                    </div>
+                    <div class='albumfour'>
+                      <image class='albumimg' src='images/music.png'/>
+                      <div class='album'>Album</div>
+                      <div class='artist'>Artist</div>
+                    </div>
+                </div>
+            </section>
+          </div>
+    </div>
+    <div id="oauth">
     </div>
 
     <script id="user-profile-template" type="text/x-handlebars-template">
