--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
         <div class="container">
           <div class="top-container">
             <header class="topnav">
-              <div></div>
               <div id="login">
                 <button id="login-button" class="login-btn">Log in with Spotify</button>
               </div>
               <div id="loggedin">
-                <div id="user-profile"></div>
+                <div id="user-profile" class="name"></div>
               </div>
             </header>
           </div>
@@ -72,25 +71,7 @@
     </div>
 
     <script id="user-profile-template" type="text/x-handlebars-template">
-      <h1>Logged in as {{display_name}}</h1>
-      <div class="media">
-        <div class="pull-left">
-          <img class="media-object" width="150" src="{{images.0.url}}" />
-        </div>
-        <div class="media-body">
-          <dl class="dl-horizontal">
-            <dt>Display name</dt><dd class="clearfix">{{display_name}}</dd>
-            <dt>Id</dt><dd>{{id}}</dd>
-            <dt>Email</dt><dd>{{email}}</dd>
-            <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
-            <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
-            <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
-            <dt>Country</dt><dd>{{country}}</dd>
-          </dl>
-          <p id="name">Yumichiya</p>
-          <button type="button" id="print" onclick="test()">Print</button>
-        </div>
-      </div>
+      <dd>{{display_name}}</dd>
     </script>
 
     <script id="oauth-template" type="text/x-handlebars-template">
