--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </div>
 
     <script id="user-profile-template" type="text/x-handlebars-template">
+      <dd class="profileimg">{{images.0.url}}</dd>
       <dd>{{display_name}}</dd>
     </script>
 
