--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
 
     <script id="user-profile-template" type="text/x-handlebars-template">
-      <dd class='profileimg'><a href="{{images.0.url}}"></a>{{images.0.url}}</a></dd>
+      <dd class='profileimg'><img href="{{images.0.url}}"></a>{{images.0.url}}</dd>
       <dd>{{display_name}}</dd>
     </script>
 
