--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
     </div>
 
     <script id="user-profile-template" type="text/x-handlebars-template">
-      <img class="media-object" width="150" src="{{images.0.url}}" />
-      <dd class='profileimg'><img href="{{images.0.url}}"></a>{{images.0.url}}</dd>
+      <img class="profileimg" src="{{images.0.url}}" />
       <dd>{{display_name}}</dd>
     </script>
 
