--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
             </section>
           </div>
     </div>
+    <form id="search-form">
+      <input type="text" id="query" value="" class="form-control" placeholder="Type an Artist Name"/>
+      <input type="submit" id="search" class="btn btn-primary" value="Search" />
+  </form>
+  <div id="results"></div>
+</div>
+<script id="results-template" type="text/x-handlebars-template">
+  {{#each albums.items}}
+  <div style="background-image:url({{images.0.url}})" data-album-id="{{id}}" class="cover"></div>
+  {{/each}}
+</script>
     <div id="oauth">
     </div>
 
