--- a/index.html
+++ b/index.html
@@ -98,5 +98,6 @@
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src='login.js'></script>
     <script src='album.js'></script>
+    <script src='test.js'></script>
   </body>
 </html>
