--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </script>
 
     <script id="featured-template">
-
+      <div>{{name}}</div>
     </script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
