--- a/index.html
+++ b/index.html
@@ -71,13 +71,8 @@
             </section>
           </div>
     </div>
-    <form id="search-form">
-      <input type="text" id="query" value="" class="form-control" placeholder="Type an Artist Name"/>
-      <input type="submit" id="search" class="btn btn-primary" value="Search" />
-  </form>
-  <div id="results"></div>
 </div>
-
+</div>
     <script id="user-profile-template" type="text/x-handlebars-template">
       <img class="profileimg" src="{{images.0.url}}" />
       <div class='name'>{{display_name}}</div>
