--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@
           </div>
     </div>
 </div>
-</div>
     <script id="user-profile-template" type="text/x-handlebars-template">
       <img class="profileimg" src="{{images.0.url}}" />
       <div class='name'>{{display_name}}</div>
     </script>
 
-    <script id="featured-template">
+    <script id="featured-template" type="text/x-handlebars-template">
       <div>{{name}}</div>
     </script>
 
