--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
     </script>
 
     <script id="featured-template" type="text/x-handlebars-template">
-      <div>{{name}}</div>
+      {{#each albums.items}}
+    <div style="background-image:url({{images.0.url}})" data-album-id="{{id}}" class="cover"></div>
+    {{/each}}
     </script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
