--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                     </div>
                 </div>
                 <div class='recplaygrid'>
-                  <h2 class='recplay'>Featured Playlists</h2>
-                  <div id='featured'></div>
+                  <h2 class='recplay'>New Releases</h2>
+                  <div id='new-releases'></div>
               </div>
             </section>
           </div>
@@ -77,9 +77,13 @@
       <div class='name'>{{display_name}}</div>
     </script>
 
-    <script id="featured-template" type="text/x-handlebars-template">
+    <script id="new-releases-template" type="text/x-handlebars-template">
       {{#each albums.items}}
-    <div style="background-image:url({{images.0.url}})" data-album-id="{{id}}" class="cover"></div>
+      <div class='albumfour'>
+        <div style="background-image:url({{images.0.url}})" data-album-id="{{id}}" class="cover"></div>
+        <div class='album'>Album</div>
+        <div class='artist'>Artist</div>
+      </div>
     {{/each}}
     </script>
 
